server/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### limit any 7777 ::/0 any ::/0 in comment=535348
-A ufw6-user-input -p tcp --dport 7777 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 7777 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 15 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 7777 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 7777 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 7777 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 15 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 7777 -j ufw6-user-limit-accept

### tuple ### deny any 22 ::/0 any ::/0 in comment=535348
-A ufw6-user-input -p tcp --dport 22 -j DROP
-A ufw6-user-input -p udp --dport 22 -j DROP

### tuple ### limit any 25 ::/0 any ::/0 in comment=506f7374666978
-A ufw6-user-input -p tcp --dport 25 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 25 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 25 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 25 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 25 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 25 -j ufw6-user-limit-accept

### tuple ### limit any 53 ::/0 any ::/0 in comment=556e626f756e64
-A ufw6-user-input -p tcp --dport 53 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 53 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 53 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 53 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 53 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 53 -j ufw6-user-limit-accept

### tuple ### limit any 80 ::/0 any ::/0 in comment=48545450
-A ufw6-user-input -p tcp --dport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 20 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 80 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 20 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 80 -j ufw6-user-limit-accept

### tuple ### limit any 443 ::/0 any ::/0 in comment=4854545053
-A ufw6-user-input -p tcp --dport 443 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 443 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 20 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 443 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 443 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 443 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 20 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 443 -j ufw6-user-limit-accept

### tuple ### limit any 993 ::/0 any ::/0 in comment=494d4150
-A ufw6-user-input -p tcp --dport 993 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 993 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 993 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 993 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 993 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 993 -j ufw6-user-limit-accept

### tuple ### limit any 8096 ::/0 any ::/0 in comment=4a656c6c7966696e
-A ufw6-user-input -p tcp --dport 8096 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 8096 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 25 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 8096 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 8096 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 8096 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 25 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 8096 -j ufw6-user-limit-accept

### tuple ### limit any 14880 ::/0 any ::/0 in comment=546f7272656e74
-A ufw6-user-input -p tcp --dport 14880 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 14880 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 14880 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 14880 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 14880 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 14880 -j ufw6-user-limit-accept

### tuple ### limit any 8000 ::/0 any ::/0 in comment=526576616e6365642050617463686572
-A ufw6-user-input -p tcp --dport 8000 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 8000 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 20 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 8000 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 8000 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 8000 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 20 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 8000 -j ufw6-user-limit-accept

### tuple ### limit any 8001 ::/0 any ::/0 in comment=51626974746f7272656e74
-A ufw6-user-input -p tcp --dport 8001 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 8001 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 20 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 8001 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 8001 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 8001 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 20 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 8001 -j ufw6-user-limit-accept

### tuple ### limit any 465 ::/0 any ::/0 in comment=534d5450
-A ufw6-user-input -p tcp --dport 465 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 465 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 465 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 465 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 465 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 465 -j ufw6-user-limit-accept

### tuple ### limit any 587 ::/0 any ::/0 in comment=506f7374666978
-A ufw6-user-input -p tcp --dport 587 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 587 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 587 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 587 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 587 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 587 -j ufw6-user-limit-accept

### tuple ### limit any 8080 ::/0 any ::/0 in comment=48545450
-A ufw6-user-input -p tcp --dport 8080 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 8080 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 8080 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 8080 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 8080 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 8080 -j ufw6-user-limit-accept

### tuple ### limit any 18080 ::/0 any ::/0 in comment=4d6f6e65726f20503250
-A ufw6-user-input -p tcp --dport 18080 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 18080 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 18080 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 18080 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 18080 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 18080 -j ufw6-user-limit-accept

### tuple ### limit any 18081 ::/0 any ::/0 in comment=4d6f6e65726f20525043
-A ufw6-user-input -p tcp --dport 18081 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 18081 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 18081 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 18081 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 18081 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 18081 -j ufw6-user-limit-accept

### tuple ### limit any 18082 ::/0 any ::/0 in comment=4d6f6e65726f205a4d51
-A ufw6-user-input -p tcp --dport 18082 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 18082 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 18082 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 18082 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 18082 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 18082 -j ufw6-user-limit-accept

### tuple ### limit any 37888 ::/0 any ::/0 in comment=5032706f6f6c206d696e69
-A ufw6-user-input -p tcp --dport 37888 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 37888 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 37888 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 37888 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 37888 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 10 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 37888 -j ufw6-user-limit-accept

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
